@@ -25,6 +25,9 @@ require 5.001;
 
 use Getopt::Long;
 
+delete @ENV{'IFS', 'CDPATH', 'ENV', 'BASH_ENV', 'PATH'};
+$ENV{'PATH'} = "/usr/bin:/usr/sbin:/sbin:/bin";
+
 $pname = "rth-changer";
 
 $prefix="@prefix@";
