@@ -6,6 +6,9 @@ eval '(exit $?0)' && eval 'exec @PERL@ -S $0 ${1+"$@"}'
 	& eval 'exec @PERL@ -S $0 $argv:q'
 		if 0;
 
+delete @ENV{'IFS', 'CDPATH', 'ENV', 'BASH_ENV', 'PATH'};
+$ENV{'PATH'} = "/usr/bin:/usr/sbin:/sbin:/bin";
+
 $debug=1;
 push(@INC, "@DUMPER_DIR@");
 
