@@ -129,6 +129,9 @@ sub init() {
 
 &init;
 
+delete @ENV{'IFS', 'CDPATH', 'ENV', 'BASH_ENV', 'PATH'};
+$ENV{'PATH'} = "/usr/bin:/usr/sbin:/sbin:/bin";
+
 $dir=$logfile;
 $dir =~ s/[^\/]*$//;
 
